deployments/common/fuse-demo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fuse-demo
  name: fuse-demo-service
spec:
  ports:
  - port: 80
    name: 80-tcp
    protocol: TCP
    targetPort: 8080
  selector:
    app: fuse-demo
  sessionAffinity: None
  type: ClusterIP
