deployments/common/fuse-demo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    description: "Fuse Route Definition for Openshift Router"
  name: fuse-demo
  labels:
    app: fuse-demo
spec:
  rules:
  - host: fuse.apps.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fuse-demo-service
            port:
              number: 80
